# altana-challenge

./: .dockerignore  .gitignore  CHALLENGE.md  Dockerfile  Makefile  README.md  app.py  config.py  docker-compose.yml  pyproject.toml  requirements.txt
api/: __init__.py  models.py
api/main/: endpoints.py
